--- a/app/src/main/res/layout/activity_pot__chatlenge.xml
+++ b/app/src/main/res/layout/activity_pot__chatlenge.xml
@@ -80,6 +80,7 @@
 
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/closepot"
                 android:textSize="14sp"
              android:gravity="center"
