--- a/app/src/main/res/layout/activity_profile_insta.xml
+++ b/app/src/main/res/layout/activity_profile_insta.xml
@@ -46,7 +46,7 @@
                      android:textColor="@color/quantum_black_text"
                      android:textSize="14sp"
                      android:textStyle="bold"
-                     android:text="102"
+                     android:text=""
                      android:gravity="center"
                      android:layout_gravity="center"
                      android:layout_weight="0.5"
@@ -72,7 +72,7 @@
                      android:textColor="@color/quantum_black_text"
                      android:textSize="14sp"
                      android:textStyle="bold"
-                     android:text="102"
+                     android:text=""
                      android:gravity="center"
                      android:layout_gravity="center"
                      android:layout_weight="0.5"
@@ -98,7 +98,7 @@
                      android:textColor="@color/quantum_black_text"
                      android:textSize="14sp"
                      android:textStyle="bold"
-                     android:text="102"
+                     android:text=""
                      android:gravity="center"
                      android:layout_gravity="center"
                      android:layout_weight="0.5"
@@ -126,7 +126,7 @@
             android:textStyle="bold"
             android:textColor="@color/quantum_black_text"
             android:textSize="18sp"
-            android:text="Joom"
+            android:text=""
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
