--- a/app/src/main/res/layout/activity_my_challenge_detail.xml
+++ b/app/src/main/res/layout/activity_my_challenge_detail.xml
@@ -315,6 +315,7 @@ android:layout_marginTop="10dp"
                     android:layout_height="wrap_content"/>
 
                 <TextView
+                    android:visibility="invisible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
@@ -324,7 +325,7 @@ android:layout_marginTop="10dp"
                     />
 
                 <RelativeLayout
-
+android:visibility="invisible"
                     android:layout_marginTop="8dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
